--- a/client/src/assets/styles/pages/_project.scss
+++ b/client/src/assets/styles/pages/_project.scss
@@ -7,6 +7,13 @@
     text-shadow: 1px 1px 2px $white;
     margin: 3rem auto 1rem auto;
 
+
+    .project__list{
+      display: flex;
+      flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
     h1 {
       font-size: 3rem;
       line-height: 3rem;
@@ -43,44 +50,134 @@
  // slider css
  // source : https://codepen.io/alvarotrigo/pen/bGqgqeK
 
-    .project__list__container {
-      // display: flex;
-      // flex-wrap: nowrap;
-      // justify-content: left;
-      // align-items: center;
-      // margin: 0 auto;
-      // overflow-x: scroll;
+/* slider css  */
 
-      /* slider css */
+ 
+// .slider {
+//   width: 100%;
+//   max-width: 600px;
+//   height: 400px;
+//   margin: 20px;
+//   text-align: center;
+//   border-radius: 20px;
+//   overflow: hidden;
+//   position: relative;
+  
+  
+//   .slides {
+//     display: flex;
+//     overflow-x: scroll;
+//     position: relative;
+//     scroll-behavior: smooth;
+//     scroll-snap-type: x mandatory;
+//   }
+  
+//   .slide {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     flex-shrink: 0;
+//     width: 100%;
+//     height: 400px;
+//     scroll-snap-align: center;
+//     margin-right: 0px;
+//     box-sizing: border-box;
+//     //background: white;
+//     transform-origin: center center;
+//     transform: scale(1);
+//     box-shadow: 0 0 10px #333;
+
+// }
+
+
+// // .slide a {
+// //   background: none;
+// //   border: none;
+// // }
+
+// .slider::before {
+//   transform: rotate(135deg);
+//   -webkit-transform: rotate(135deg);
+//   left: 5%;
+// }
+
+// .slider::after {
+//   transform: rotate(-45deg);
+//   -webkit-transform: rotate(-45deg);
+//   right: 5%;
+// }
+
+// .slider::before,
+// .slider::after {
+//   position: absolute;
+//   top: 48%;
+//   width: 35px;
+//   height: 35px;
+//   border: solid black;
+//   border-width: 0 4px 4px 0;
+//   padding: 3px;
+//   box-sizing: border-box;
+// }
+
+// .slider::before,
+// .slider::after {
+//   content: "";
+//   z-index: 1;
+//   background: none;
+//   pointer-events: none;
+// }
+
+// .slider__nav {
+//   box-sizing: border-box;
+//   position: absolute;
+//   bottom: 5%;
+//   left: 50%;
+//   width: 200px;
+//   margin-left: -100px;
+//   text-align: center;
+// }
+
+// .slider__navlink {
+//   display: inline-block;
+//   height: 15px;
+//   width: 15px;
+//   border-radius: 50%;
+//   background-color: black;
+//   margin: 0 10px 0 10px;
+// }
+
+// }
+/* END slider css */ 
+
+
+
+
+    .project__list__container {
       display: flex;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      align-items: center;
+      margin: 0 auto;
       overflow-x: scroll;
-      position: relative;
-      scroll-behavior: smooth;
-      scroll-snap-type: x mandatory;
+
+  position: relative;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+
 
       /* Three columns side by side */
       .project__list__item {
-        // margin: 1rem;
-        // border-radius: 10px;
-        // overflow: hidden;
-        // min-width: 30%;
-        // height: 300px;
-        // border-radius: 25px;
-        // margin-top: 0.5rem;
+        margin: 1rem;
+        border-radius: 10px;
+        overflow: hidden;
+        min-width: 90%;
+        height: 300px;
+        border-radius: 25px;
+        margin-top: 0.5rem;
 
-        /*slider css */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-shrink: 0;
-        width: 100%;
-        height: 400px;
-        scroll-snap-align: center;
-        margin-right: 0px;
-        box-sizing: border-box;
-        background: white;
-        transform-origin: center center;
-        transform: scale(1);
+  scroll-snap-align: center;
+  transform-origin: center center;
+  transform: scale(1);
 
 
         @media screen and (max-width: 969px) {
@@ -120,12 +217,13 @@
         }
 
         .card__link {
-
-
+          width: 75%;
+          
+          
           /* Add some shadows to create a card effect */
           .project__list__item--card {
             display: block;
-            width: 100%;
+            width: 85%;
             height: 100%;
             overflow: hidden;
             border-radius: 5px;
@@ -134,51 +232,9 @@
             transition: all 1s ease-in-out;
 
 
+            margin-left: auto;
+            margin-right: auto;
             
-
-/* slider css  */
- a {
-  background: none;
-  border: none;
-}
-
-a.slide__prev,
-.project__list__item::before {
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-  left: 5%;
-}
-
-a.slide__next,
-.project__list__item::after {
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  right: 5%;
-}
-
-.project__list__item::before,
-.project__list__item::after,
-.slide__prev,
-.slide__next {
-  position: absolute;
-  top: 48%;
-  width: 35px;
-  height: 35px;
-  border: solid black;
-  border-width: 0 4px 4px 0;
-  padding: 3px;
-  box-sizing: border-box;
-}
-
-.project__list__item::before,
-.project__list__item::after {
-  content: "";
-  z-index: 1;
-  background: none;
-  pointer-events: none;
-}
-
-/* END slider css */ 
 
 
             .project__list__item--card--cover {
@@ -237,10 +293,10 @@ a.slide__next,
           }
         }
 
-        // }
+        }
 
       }
-    }
+    //}
 
 
     /* page descriptif de chaque projet */
@@ -482,4 +538,4 @@ a.slide__next,
 
       }
     }
-  }
+  }}
